# RAG

./: Makefile  README.md  Recall@k.txt  answer_shema.excalidraw  bonus.txt  improvements.txt  pyproject.toml
bm25_index/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results_and_answer/: dataset_code_public.json  dataset_docs_public.json
data/processed/: corpus.mmindex.json  indices.csc.index.npy  params.index.json
data/processed/bm25_index/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/processed/bm25_index/code/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/processed/bm25_index/docs/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: Answerer.py  Chunker.py  CliGestion.py  Constants.py  DataModels.py  Evaluater.py  Evaluator.py  Parser.py  Retriever.py  __main__.py
src/core/: Answerer.py  Chunker.py  Evaluator.py  Indexer.py  Parser.py  Retriever.py
