[project]
name = "pre-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.4",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mypy>=1.20.1",
    "nltk>=3.9.4",
    "ollama>=0.6.1",
    "pydantic>=2.13.2",
    "tqdm>=4.67.3",
]

[[tool.mypy.overrides]]
module = [
    "bm25s.*",
    "fire.*",
    "tqdm.*",
    "nltk.*"
]
ignore_missing_imports = true
